--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "prepare": "tsc",
-    "test": "nyc ava",
+    "test": "ava",
     "testing": "ava -w",
     "release": "git release `node -e \"console.log('v'+require('./package').version)\"` -c"
   },
@@ -11,7 +11,6 @@
     "@types/aws-lambda": "^0.0.32",
     "@types/node": "^9.4.6",
     "ava": "^0.25.0",
-    "nyc": "^11.4.1",
     "typescript": "^2.7.2"
   },
   "files": [
