--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,40 @@
 language: node_js
 node_js:
-- node
-- 8
-- 6
-- 4
+  - node
+  - 8
+  - 6
+  - 4
+
 cache: yarn
+
 branches:
   only:
-  - master
-  - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+    - master
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+
+before_install:
+  - which npx || yarn global add npx
+
 script:
-- npx nyc --reporter=lcov npm test
-# after_success:
-# - npx codecov
+  - npx nyc --reporter=lcov npm test
+
+after_success:
+  # - npx codecov
+  - echo TRAVIS_BUILD_ID $TRAVIS_BUILD_ID
+  - echo TRAVIS_BUILD_NUMBER $TRAVIS_BUILD_NUMBER
+  - echo TRAVIS_JOB_ID $TRAVIS_JOB_ID
+  - echo TRAVIS_JOB_NUMBER $TRAVIS_JOB_NUMBER
+  - echo TRAVIS_NODE_VERSION $TRAVIS_NODE_VERSION
+
 notifications:
   email: false
+
 deploy:
-- provider: script
-  script: npx codecov
-  on:
-    repo: vitarn/serverless-tools
-    node: node
-- provider: npm
-  skip_cleanup: true
-  email: $NPM_EMAIL
-  api_key: $NPM_TOKEN
-  on:
-    tags: true
-    repo: vitarn/serverless-tools
-    node: node
+  - provider: npm
+    skip_cleanup: true
+    email: $NPM_EMAIL
+    api_key: $NPM_TOKEN
+    on:
+      tags: true
+      repo: vitarn/serverless-tools
+      node: node
