--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
   - npx nyc npm test
 
 after_success:
-  - '[ $TRAVIS_NODE_VERSION = node ] && nyc report --reporter=text-lcov > coverage.lcov && codecov'
+  - '[ $TRAVIS_NODE_VERSION = node ] && npx nyc report --reporter=text-lcov > coverage.lcov && npx codecov'
 
 notifications:
   email: false
