Run test with yarn

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - which npx || yarn global add npx
 
 script:
-  - npx nyc npm test
+  - npx nyc yarn test
 
 after_success:
   - '[ $TRAVIS_NODE_VERSION = node ] && npx nyc report --reporter=text-lcov > coverage.lcov && npx codecov'
