--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "moduleResolution": "node",
         "module": "commonjs",
+        "target": "es5",
+        "inlineSourceMap": true,
         "declaration": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "target": "es5",
         "skipLibCheck": true,
         "lib": [
             "esnext"
