--- a/.travis.yml
+++ b/.travis.yml
@@ -15,11 +15,8 @@ cache: yarn
 before_install:
   - which npx || yarn global add npx
 
-script:
-  - yarn build && npx nyc yarn test
-
 after_success:
-  - npx nyc report --reporter=lcov && npx codecov
+  - npx codecov
 
 stages:
   - test
