--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "**/*.ts"
     ],    
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "test/**/*.ts"
     ],
     "compileOnSave": true
 }
