--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.6",
   "scripts": {
     "build": "tsc",
-    "test": "jest --coverage",
+    "test": "jest",
     "testing": "jest --watch",
+    "coverage": "jest --coverage",
+    "typecheck": "tsc --noEmit",
     "release": "git release `node -e \"console.log('v'+require('./package').version)\"` -c",
-    "prepack": "tsc --removeComments --inlineSourceMap false"
+    "prepack": "tsc --removeComments --inlineSourceMap false | echo shut up"
   },
   "dependencies": {
     "accepts": "^1.3.4",
