--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "accepts": "^1.3.4",
     "content-type": "^1.0.4",
+    "http-errors": "^1.6.2",
     "koa-compose": "^4.0.0",
     "koa-is-json": "^1.0.0",
     "lodash.get": "^4.4.2",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@koa/cors": "^2.2.1",
     "@types/aws-lambda": "^0.0.32",
+    "@types/http-errors": "^1.6.1",
     "@types/jest": "^22.1.3",
     "@types/node": "^9.4.6",
     "@types/sinon": "^4.1.4",
