Move travis cond into jobs section

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,26 +11,15 @@ branches:
 
 cache: yarn
 
-before_install:
-  - which npx || yarn global add npx
-
-script:
-  - yarn typecheck
-  - yarn coverage
-
-after_success:
-  - npx codecov
-
-stages:
-  - test
-  - name: deploy
-    if: tag IS present
-
 jobs:
   include:
+    - stage: test
+      before_install: which npx || yarn global add npx
+      script: yarn typecheck && yarn coverage
+      after_success: npx codecov
     - stage: deploy
+      if: tag IS present
       script: skip
-      after_success: echo Ready deploy...
       deploy:
         provider: npm
         skip_cleanup: true
