--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,24 @@ jobs:
     - stage: test
       if: branch = master AND type IN (push, pull_request)
       before_install: which npx || yarn global add npx
-      script: yarn typecheck && yarn coverage
+      script:
+        - yarn typecheck
+        - yarn coverage
       after_success: npx codecov
-    - stage: deploy
+    - stage: deploy master
+      if: branch = master AND type IN (push)
+      script: skip
+      deploy:
+        provider: npm
+        skip_cleanup: true
+        email: $NPM_EMAIL
+        api_key: $NPM_TOKEN
+        on:
+          branch: master
+          tag: next
+          repo: vitarn/serverless-tools
+          node: node
+    - stage: deploy tag
       if: tag IS present
       script: skip
       deploy:
