--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "serverless-tools",
-  "version": "0.0.8",
+  "version": "0.0.8-alpha.1",
   "scripts": {
     "build": "tsc",
     "test": "jest",
