--- a/.travis.yml
+++ b/.travis.yml
@@ -4,31 +4,20 @@ node_js:
   - 8
   - 6
 
+before_install: which npx || yarn global add npx
+
+script:
+  - yarn typecheck
+  - yarn coverage
+
+after_success: npx codecov
+
 jobs:
   include:
-    - stage: test
-      if: branch = master AND type IN (push, pull_request)
-      before_install: which npx || yarn global add npx
-      script:
-        - yarn typecheck
-        - yarn coverage
-      after_success: npx codecov
-    - stage: deploy master
-      if: branch = master AND type IN (push)
-      script: skip
-      deploy:
-        provider: npm
-        tag: next
-        skip_cleanup: true
-        email: $NPM_EMAIL
-        api_key: $NPM_TOKEN
-        on:
-          branch: master
-          repo: vitarn/serverless-tools
-          node: node
-    - stage: deploy tag
+    - stage: deploy
       if: tag IS present
       script: skip
+      after_success: echo Ready deploy...
       deploy:
         provider: npm
         skip_cleanup: true
