chore(package): add pkg description (#22)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "serverless-tools",
   "version": "0.0.9",
+  "description": "Serverless toolbox",
   "scripts": {
     "build": "tsc",
     "test": "jest",
