--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "serverless-tools",
   "version": "0.0.11",
   "description": "Serverless toolbox",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vitarn/serverless-tools"
+  },
+  "keywords": [
+    "serverless",
+    "toolbox",
+    "typescript"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest",
